# ai_learnhub

./: .env.example  .gitignore  ARCHITECTURE.md  Agent_Modify_Readme.md  CHANGELOG.md  COURSE_IMPORT_GUIDE.md  FILE_LIFE_CIRCLE.md  MONITOR_MANUAL.md  PROMPT_MANAGEMENT.md  RAG_ARCHITECTURE.md  RAG_INTEGRATE.md  RAG_MANUAL.md  README.en.md  README.md  SCRIPT_MANUAL.md  TODO.md  debug-tips.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  raw_courses  schema.sql
change_log/: 刷题模式自动开启批次.md  (+27 more)
scripts/: batch_import_questions.py  convert_docx_to_json.py  convert_md_to_json.py  convert_md_to_json_README.md  convert_sample_quiz.py  generate_course_from_url.py  generate_questions_from_course.py  import_json_schema.md  import_learning_courses.py  import_questions.py  init_course_data.py  init_db.py  pyproject.toml
scripts/data/input/: sampleQuiz.md  sample_docx.docx  sample_quiz.md
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
src/backend/app/agent/: __init__.py  base.py  events.py  rag_optimizer.py
src/backend/app/api/: README.md  admin.py  admin_kb.py  courses.py  exam.py  learning.py  mistakes.py  question_sets.py  quiz.py  rag.py  review.py  users.py
src/backend/app/core/: README.md  admin_security.py  database.py  ebbinghaus.py  paths.py
src/backend/app/course_pipeline/: __init__.py  models.py  pipeline.py
src/backend/app/llm/: __init__.py  base.py  config.py  langfuse_wrapper.py  openai_client.py  streaming.py  usage.py
src/backend/config/: rag_config.yaml
src/backend/prompts/: __init__.py  loader.py
src/backend/tests/: TESTING.md  __init__.py  conftest.py  test_chroma_vector_store.py  test_course_lifecycle.py  test_course_refactor.py  test_index_tasks.py  test_rag_service.py  test_sync_functionality.py
(+151 files in other folders)
