[project]
name = "ailearn-scripts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "alembic==1.13.1",
    "python-docx>=1.1.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
name = "pypi"

[tool.uv]
dev-dependencies = [
    "pytest==7.4.4",
    "httpx==0.26.0",
]
