[project]
name = "ailearn-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "psycopg2-binary>=2.9.9",
    # LLM/AI
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.6",
    # RAG模块依赖（轻量化，不包含模型）
    "chromadb>=0.4.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "langdetect>=1.0.9",
    "pyyaml>=6.0.0",
]
